# quantipy3

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  python-package.yml
.pytest_cache/v/cache/: nodeids
quantipy/: __init__.py  dependency_versions.py  significant_dependency_versions.py  version.py
quantipy/core/: batch.py  cache.py  chain.py  cluster.py  dataset.py  dataset.py.bak  link.py  options.py  rules.py  stack.py  view.py
quantipy/core/builds/excel/: excel_painter.py
quantipy/core/helpers/: constants.py  functions.py
quantipy/core/quantify/: engine.py
quantipy/core/srv/: core.py  handlers.py  servers.py
quantipy/core/tools/: __init__.py  audit.py  qp_decorators.py
quantipy/core/view_generators/: view_mapper.py  view_maps.py  view_specs.py
quantipy/core/weights/: rim.py  weight_engine.py
quantipy/sandbox/: excel.py  excel_formats.py  excel_formats_constants.py  sandbox.py
quantipy/sandbox/pptx/: PptxChainClass.py  PptxDefaultsClass.py  PptxPainterClass.py  enumerations.py  pptx_defaults.py
tests/: parameters_chain.py  test_banked_chains.py  test_batch.py  test_chain.py  test_chain_old.py  test_cluster.py  test_complex_logic.py  test_dataset.py  test_excel.py  test_forsta_reader.py  test_io_dimensions.py  test_link.py  test_logic_views.py  test_merging.py  test_recode.py  test_rim.py  test_rules.py  test_stack.py  test_view.py  test_view_manager.py  test_view_mapper.py  test_view_maps.py  test_weight_engine.py  test_xlsx_formats.py
tests/chain_values_pre_pandas_2_0_0/: test_get_x_orientation_chain_df-q5_1_@_q4 > gender > Wave_q5_1_q4 > gender0.json  test_get_x_orientation_expected_df-q5_1_@_q4 > gender > Wave-0.json  test_get_x_orientation_expected_df-q5_1_@_q4 > gender-0.json  test_get_x_orientation_expected_df-q5_1_@_q4-0.json  test_get_x_orientation_stack-q5_1_@_q4 > gender > Wave.json  test_get_x_orientation_stack-q5_1_@_q4 > gender > Wave_q5_1_q4 > gender.json  test_get_x_orientation_stack-q5_1_@_q4.json
(+29 files in other folders)
