[metadata]
name = quantipy
description = "A Numpy and Pandas-based library for processing, analysis and reporting on people data."
author = Martin Thorsen Ranang
author_email = mtr@ranang.org
url = https://github.com/encount/quantipy3
license = MIT
license_files = LICENSE.txt

[options]
package_dir =
    =.
packages = find_namespace:

[options.packages.find]
where = .

[aliases]
test=pytest

[tool:pytest]
norecursedirs=*egg .eggs .idea data debug
#addopts=--cov quantipy
filterwarnings = ignore::DeprecationWarning
